--- a/backend/blog/Gemfile
+++ b/backend/blog/Gemfile
@@ -14,6 +14,8 @@ gem "puma", "~> 5.0"
 
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
 # gem "jbuilder"
+# Jb should be a fine alternative
+gem 'jb', '~> 0.8.0'
 
 # Use Redis adapter to run Action Cable in production
 # gem "redis", "~> 4.0"
@@ -40,6 +42,9 @@ gem 'rubocop', require: false
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
+
+  # Trying out byebug instead of pry
+  gem 'byebug'
 end
 
 group :development do
