--- a/backend/blog/Gemfile
+++ b/backend/blog/Gemfile
@@ -15,7 +15,7 @@ gem "puma", "~> 5.0"
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
 # gem "jbuilder"
 # Jb should be a fine alternative
-gem 'jb', '~> 0.8.0'
+# gem 'jb', '~> 0.8.0'
 
 # Use Redis adapter to run Action Cable in production
 # gem "redis", "~> 4.0"
@@ -50,5 +50,8 @@ end
 group :development do
   # Speed up commands on slow machines / big apps [https://github.com/rails/spring]
   # gem "spring"
+
+  # For gentler rubocop rules
+  gem "rubocop-rails-omakase", require: false
 end
 
