--- a/frontend/vue-app/package.json
+++ b/frontend/vue-app/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
+    "sass": "^1.70.0",
     "start-server-and-test": "^2.0.3",
     "vite": "^5.0.10"
   }
