Init format using standardrb

--- a/backend/blog/Gemfile
+++ b/backend/blog/Gemfile
@@ -12,9 +12,6 @@ gem "sqlite3", "~> 1.4"
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", "~> 5.0"
 
-# Authentication
-gem 'jwt', '~> 1.5', '>= 1.5.4'
-
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
 # gem "jbuilder"
 # Jb should be a fine alternative
@@ -30,7 +27,7 @@ gem 'jwt', '~> 1.5', '>= 1.5.4'
 gem "bcrypt", "~> 3.1.7"
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
-gem "tzinfo-data", platforms: %i[ mingw mswin x64_mingw jruby ]
+gem "tzinfo-data", platforms: %i[mingw mswin x64_mingw jruby]
 
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", require: false
@@ -43,12 +40,12 @@ gem "bootsnap", require: false
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
-  gem "debug", platforms: %i[ mri mingw x64_mingw ]
-  gem 'factory_bot_rails'
+  gem "debug", platforms: %i[mri mingw x64_mingw]
+  gem "factory_bot_rails"
   gem "faker"
 
   # Trying out byebug instead of pry
-  gem 'byebug'
+  gem "byebug"
 end
 
 group :development do
@@ -60,4 +57,3 @@ group :development do
   gem "standard"
   # gem 'rubocop', require: false
 end
-
