--- a/frontend/vue-app/package.json
+++ b/frontend/vue-app/package.json
@@ -31,7 +31,8 @@
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-vue": "^9.17.0",
     "postcss": "^8.4.35",
-    "prettier": "^3.0.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "sass": "^1.70.0",
     "start-server-and-test": "^2.0.3",
     "tailwindcss": "^3.4.1",
