Added dynamic NavBar

--- a/frontend/vue-app/package.json
+++ b/frontend/vue-app/package.json
@@ -15,9 +15,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.1",
     "@tiptap/pm": "^2.1.16",
     "@tiptap/starter-kit": "^2.1.16",
     "@tiptap/vue-3": "^2.1.16",
+    "@vueuse/core": "^10.7.2",
+    "pinia": "^2.1.7",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
